# Strix

./: .gitignore  CMakeLists.txt  README.md  build.sh  gdb.gdbinit
include/: c.h
src/: PacketForge.c  attack_monitoring.c  cli.c  error.c  executor.c  injector.c  main.c  manager.c  memcached.c  memutils.c  monitoring.c  netbasic.c  netio.c  packetforge.c  planner.c  shellstrix.c  strix.c
src/include/: PacketForge.h  c.h  cli.h  error.h  executor.h  injector.h  manager.h  memcached.h  memutils.h  monitoring.h  netbasic.h  netio.h  packetforge.h  planner.h  shellstrix.h  strix.h  strix_defines.h
src/include/injector/: injector.h
